--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: .05%;
+  gap: 0.05%;
 }
 .banner-text {
   width: 708px;
@@ -86,6 +86,7 @@
   color: #272727;
   margin-bottom: 32px;
 }
+
 button {
   font-size: 20px;
   font-weight: bold;
@@ -114,6 +115,9 @@ p {
   line-height: 30px;
   margin-bottom: 32px;
 }
+.feature {
+  margin-bottom: 128px;
+}
 .feature-title {
   width: 594px;
   margin: 178px auto 48px auto;
@@ -134,6 +138,21 @@ p {
   justify-content: center;
   align-items: center;
   margin-bottom: 32px;
+}
+.feature-body .first-card,
+.second-card,
+.third-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+.feature-body a {
+  text-align: center;
+  text-decoration: none;
+  color: #272727;
+  font-size: 24px;
+  font-weight: bold;
 }
 .feature-card {
   display: flex;
@@ -275,7 +294,140 @@ footer h2 span {
 footer .copyright {
   color: rgba(255, 255, 255, 0.4);
   padding-bottom: 128px;
+  margin-top: 32px;
 }
 footer p {
   color: white;
+  margin-bottom: 0;
+}
+.hide {
+  display: none !important;
+}
+
+@media screen and (max-width: 567px) {
+  .banner {
+    flex-direction: column;
+    text-align: center;
+    /* width: 100%; */
+  }
+
+  .banner-text {
+    width: 100%;
+  }
+  .banner-text p {
+    padding: 0 16px;
+  }
+  .banner-text h1 {
+    font-size: 40px;
+    font-weight: extra-bold;
+    margin-bottom: 32px;
+    margin-top: 40px;
+  }
+  .feature-title {
+    width: auto;
+    margin: auto;
+    text-align: center;
+  }
+  .feature {
+    margin-top: 50px;
+  }
+  .feature-body {
+    display: grid;
+    grid-template-columns: repeat(1 1fr);
+  }
+  .service {
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+  .hot-deal {
+    flex-direction: column;
+    text-align: center;
+  }
+  .instagram-pic {
+    flex-direction: column;
+  }
+  .deal {
+    background-image: url('./Flower Asset/Rectangle 9.png');
+    padding: 20px;
+  }
+  .deal .form {
+    flex-direction: column;
+    gap: 16px;
+    justify-content: center;
+  }
+  .deal .form input {
+    width: auto;
+    font-size: 16px;
+    padding: 22px;
+    border: none;
+    border-radius: 8px;
+  }
+  footer h2 {
+    padding-top: 50px;
+    margin-bottom: 24px;
+  }
+  footer .copyright {
+    padding-bottom: 50px;
+  }
+  .hot-deal .text {
+    width: auto;
+  }
+}
+
+@media screen and (min-width: 567px) and (max-width: 992px) {
+  .banner-text h1 {
+    font-size: 40px;
+    font-weight: extra-bold;
+    margin-bottom: 24px;
+  }
+  .banner {
+    padding: 20px 20px;
+  }
+  .feature-title {
+    width: auto;
+    margin: 50px auto 50px auto;
+    text-align: center;
+  }
+
+  .feature-body {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .feature-body .third-card {
+    grid-column: span 1;
+  }
+  .hot-deal {
+    gap: 10px;
+  }
+  .instagram-pic {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .third-card{
+    justify-content: center;
+    width: 100%;
+  }
+  .deal {
+    padding: 50px 20px;
+  }
+  .deal .form input {
+    padding: 22px 50px 22px 22px;
+  }
+  .feature,
+  .service,
+  .instagram,
+  .deal {
+    width: 90%;
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+  footer{
+    width: 100%;
+  }
+  .feature-card{
+    width: 100%;
+  }
 }
