--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ footer p {
   }
   .feature-body {
     display: grid;
-    grid-template-columns: repeat(1 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
   .service {
     flex-direction: column;
