--- a/style.css
+++ b/style.css
@@ -255,8 +255,11 @@ p {
 }
 .deal {
   background-image: url('./Flower Asset/Rectangle 9.png');
-  padding: 122px 287px;
+  
   margin-bottom: 128px;
+}
+.deal .core{
+  padding: 120px 250px;
 }
 .deal h2 {
   text-align: center;
@@ -276,7 +279,7 @@ p {
   /* width: 866px; */
 }
 .deal .form input {
-  width: 600px;
+  width: 800px;
   font-size: 16px;
   padding: 22px 513px 22px 22px;
   border: none;
